# quantifiedme

./: .env.example  .gitattributes  .gitignore  .gitmodules  .travis.yml  .venv  Dashboard.html  Makefile  Pipfile  QuantifiedMe - Dashboard.ipynb  README.md  build_dashboard.py  categories.example.toml  config.example.toml  config.toml.example  index.html  pyproject.toml
.github/workflows/: build.yml
aw-server-rust/: Dashboard.html
notebooks/: Dashboard.ipynb  Makefile  QuantifiedMe - Dashboard.ipynb  keep-updated.sh
scripts/: build_dashboard.py  habitbull.py  influxdb.py  location.py
src/quantifiedme/: __init__.py  __main__.py  activitywatch.py  build_dashboard.py  cache.py  config.py  habitbull.py  influxdb.py  load_toggl.py  location.py  main.py  oura.py  qslang.py
src/quantifiedme/derived/: all_df.py  heartrate.py  screentime.py  sleep.py
src/quantifiedme/load/: activitywatch.py  activitywatch_fake.py  comms_backup.py  cronometer.py  eeg.py  fitbit.py  freestyle_libre.py  google_activity.py  habitbull.py  home_assistant.py  lastfm.py  location.py  oura.py  qslang.py  smartertime.py  switchbot.py  toggl_.py  whoop.py  zlantar.py
src/quantifiedme/load/google_takeout/: activity.py
src/quantifiedme/predict/: __init__.py  __main__.py  baseline.py  cli.py  features.py  simulate.py
src/quantifiedme/predict/models/: __init__.py  sleep.py  work.py
src/quantifiedme/timelineplot/: plot.py  util.py
src/quantifiedme/ui/: __main__.py  main.py
tests/: test_load.py  test_load_activitywatch.py  test_load_comms_backup.py  test_load_cronometer.py  test_load_freestyle_libre.py  test_load_home_assistant.py  test_load_lastfm.py  test_load_smartertime.py  test_load_switchbot.py  test_load_whoop.py  test_load_zlantar.py  test_predict.py
