[tool.poetry]
name = "quantifiedme"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"
packages = [
    { include = "quantifiedme", from = "src" },
]

[tool.poetry.scripts]
quantifiedme = "quantifiedme.main:main"

[tool.poetry.dependencies]
python = "^3.10, <3.12"  # scipy has a <3.12 constraint
aw-core = "^0.5"
aw-client = "^0.5"
#aw_research = {git = "https://github.com/ActivityWatch/aw-research.git"}
#aw_research = {path = "/home/erb/Programming/activitywatch/other/aw-research", develop=true}
aw_research = {path = "/Users/erb/Programming/activitywatch/other/aw-research", develop=true}
qslang = {path = "./QSlang", develop=true}
numpy = "*"
scipy = ">=1.8"
#bottleneck = "1.2.3"
pandas = "*"
pandas-profiling = "*"
matplotlib = "*"
calplot = "^0.1"  # fork of calmap
joblib = "*"
tabulate = "*"
pint = "*"
toml = "*"
togglcli = "*"
#togglcli = {path = "vendor/toggl-cli"}
statsmodels = "*"
types-click = "*"
types-toml = "*"
influxdb-client = {version = "*", optional = true}
nbval = "^0.9.6"
pytest-xdist = "^2.5.0"
pytest-cov = "^3.0.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "*"
ipykernel = "*"
pytest = "*"
pytest-cov = "*"
pytest_notebook = "^0.8.0"
flake8 = "*"
mypy = "*"
black = "*"
ipympl = "*"
pyupgrade = "^3.3.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=quantifiedme --cov-report=xml --cov-report=html --cov-report=term" # --profile --cov-report=term
testpaths = [
    "src/quantifiedme",
    "tests",
]
python_files = ["*.py",]
filterwarnings = ["ignore::DeprecationWarning",]

[tool.pyright]
strictParameterNoneValue = false
pythonVersion = "3.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
