[tool.poetry]
name = "quantifiedme"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"
packages = [
    { include = "quantifiedme", from = "src" },
]

[tool.poetry.scripts]
quantifiedme = "quantifiedme.main:main"

[tool.poetry.dependencies]
python = "^3.10, <3.12"  # scipy has a <3.12 constraint
aw-core = "^0.5.16"
aw-client = "^0.5"
aw_research = {git = "https://github.com/ActivityWatch/aw-research.git"}
#aw_research = {path = "/Users/erb/Programming/activitywatch/other/aw-research", develop=true}
qslang = {path = "./QSlang", develop=true}
numpy = "*"
scipy = ">=1.10"
#bottleneck = "1.2.3"
pandas = "*"
pandas-profiling = "*"
matplotlib = "*"
calplot = "^0.1"  # fork of calmap
joblib = "*"
tabulate = "*"
pint = "*"
toml = "*"
#togglcli = "*"
#togglcli = {path = "vendor/toggl-cli"}
statsmodels = "*"
types-click = "*"
types-toml = "*"
influxdb-client = {version = "*", optional = true}
nbval = "*"

[tool.poetry.group.dev.dependencies]
jupyterlab = "*"
ipykernel = "*"
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
pytest-profiling = "*"
#pytest_notebook = "*"
flake8 = "*"
mypy = "*"
black = "*"
ipympl = "*"
pyupgrade = "*"
ruff = "*"
pandas-stubs = "^2.1.1.230928"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=quantifiedme --cov-report=xml --cov-report=html --cov-report=term" # --profile --cov-report=term
testpaths = [
    "src/quantifiedme",
    "tests",
]
python_files = ["*.py",]
filterwarnings = ["ignore::DeprecationWarning",]

[tool.pyright]
strictParameterNoneValue = false
pythonVersion = "3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
