[tool.poetry]
name = "quantifiedme"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"
packages = [
    { include = "quantifiedme", from = "src" },
]

[tool.poetry.scripts]
quantifiedme = "quantifiedme.main:main"

[tool.poetry.dependencies]
python = "^3.10"
aw-core = "^0.5.16"
aw-client = "^0.5"
aw_research = {git = "https://github.com/ActivityWatch/aw-research.git"}
#aw_research = {path = "/Users/erb/Programming/activitywatch/other/aw-research", develop=true}
qslang = {path = "./QSlang", develop=true}
numpy = "*"
scipy = ">=1.10"
#bottleneck = "1.2.3"
pandas = "*"
matplotlib = "*"
calplot = "^0.1"  # fork of calmap
joblib = "*"
tabulate = "*"
pint = "*"
tomli = {version = ">=1.2", python = "<3.11"}
#togglcli = "*"
#togglcli = {path = "vendor/toggl-cli"}
statsmodels = "*"
influxdb-client = {version = "*", optional = true}
nbval = "*"
gradio = "^4.36.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "*"
ipykernel = "*"
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
pytest-profiling = "*"
#pytest_notebook = "*"
mypy = "*"
ipympl = "*"
ruff = "*"
pandas-stubs = "^2.1.1.230928"

[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = ["ignore::DeprecationWarning",]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.pyright]
strictParameterNoneValue = false
pythonVersion = "3.10"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E4", "E7", "E9",  # pycodestyle
    "F",      # pyflakes
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "I",      # isort
    "C4",     # flake8-comprehensions
    "FURB",   # refurb
    "FLY",    # flynt (f-string over join)
    "ISC",    # implicit-str-concat
    "PLE",    # pylint errors
    "PERF",   # perflint
    "RSE102", # unnecessary-paren-on-raise-exception
    "SIM103", "SIM110", "SIM117", "SIM118", "SIM300", "SIM910",  # flake8-simplify
    "PIE790", "PIE810",  # flake8-pie
    "RET501", "RET505", "RET506", "RET507", "RET508",  # flake8-return
    "RUF010", "RUF019", "RUF100",  # ruff-specific
    "TC001", "TC002", "TC003", "TC004",  # flake8-type-checking
    "DTZ",    # flake8-datetimez (require timezone-aware datetimes)
]
ignore = ["E402", "E501", "PERF203", "DTZ"]  # DTZ: tz-aware datetimes deferred (data pipeline uses naive)

[tool.ruff.lint.isort]
known-first-party = ["quantifiedme"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
